# rules_dotnet_csharp_csproj_intellisense

./: .gitignore  BUILD  MODULE.bazel  README.md  aquery.ipynb  compile_csproj.py  generate_csproj.bzl  generate_csproj_runner.sh
Example/: LibraryA.cs  Main.cs
example/: .bazelrc  BUILD  LibraryA.cs  LibraryFileA.cs  LibraryFileB.cs  MODULE.bazel  Main.cs  MainFileA.cs  paket.dependencies  thing.proto
tool/: BUILD  CompileCsproj.cs  ListSymbols.cs  SymbolAnalysis.cs  paket.dependencies  paket.main.bzl
