"""
.Net C# CSProj Generator for Intellisense in VS Code Example.
"""

module(
    name = "rules_dotnet_csharp_csproj_intellisense_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_dotnet_csharp_csproj_intellisense")
local_path_override(
    module_name = "rules_dotnet_csharp_csproj_intellisense",
    path = "..",
)

bazel_dep(name = "rules_dotnet", version = "0.19.2")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.101")
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

main_extension = use_extension("//:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")

bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_proto_grpc_csharp", version = "5.7.1")
